pkg/lang/testdata/ub/calls/valid/tuple-elements.ub
inputs: { a: { type: tuple(string, integer) } }
