pkg/lang/testdata/ub/calls/invalid/bare-call-optional-default.ub
inputs: { a: { type: optional(integer, pick()) } }
